--- a/RequestResponseFramework.Backend.UsingWebSockets/RequestResponseFramework.Backend.UsingWebSockets.csproj
+++ b/RequestResponseFramework.Backend.UsingWebSockets/RequestResponseFramework.Backend.UsingWebSockets.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\RequestResponseFramework.Backend\RequestResponseFramework.Backend.csproj" />
     <ProjectReference Include="..\RequestResponseFramework.Shared\RequestResponseFramework.Shared.csproj" />
   </ItemGroup>
 
